# agripreserve

./: .gitignore  README.md  clear_dagshub_cache.py  requirements.txt  setup_github_dagshub_connection.py  test_dagshub_connection.py
.dvc/: config
agripreserve/: .coverage  README.md  pyproject.toml  setup.py
agripreserve/agripreserve/: cli.py
agripreserve/agripreserve/api/: routes.py  server.py
agripreserve/agripreserve/data/datasets/: aphlis-data-en-v2.19.3-nigeria-all-provinces-all-crops-2022-dry-weight-losses_in _percentage.csv
agripreserve/agripreserve/models/: .gitignore  loss_prediction_linear.joblib.dvc
agripreserve/agripreserve/ui/: __init__.py  gradio_app.py
agripreserve/agripreserve/utils/: __init__.py  dagshub_config.py  mlflow_utils.py
agripreserve/data/: .gitignore  loss_percentage_20250508_130330.csv.dvc  loss_percentage_20250508_131019.csv.dvc  loss_tonnes_20250508_122802.csv.dvc
agripreserve/examples/: track_metrics_example.py  train_model_example.py
agripreserve/metrics/: .gitignore  metrics_20250508_122802.json.dvc  metrics_20250508_123954.json.dvc  metrics_20250508_125852.json.dvc  metrics_20250508_131019.json.dvc
agripreserve/tests/: test_api_routes.py  test_cli.py
backend/: .dagshub.config  MANIFEST.in  render.py  setup.py
backend/agripreserve/: __init__.py  __main__.py  cli.py
backend/agripreserve/api/: __init__.py  routes.py  server.py
backend/agripreserve/data/: __init__.py  loader.py
backend/agripreserve/data/datasets/: aphlis-data-en-v2.19.3-nigeria-all-provinces-all-crops-2022-dry-weight-losses_in_tonnes.csv
backend/agripreserve/models/: __init__.py  loss_prediction_model.py  loss_prediction_random_forest.joblib.dvc
backend/agripreserve/utils/: dvc_utils.py  metrics_tracker.py  mlflow_utils.py
backend/data/: loss_percentage_20250508_122802.csv.dvc  loss_percentage_20250508_123954.csv.dvc  loss_percentage_20250508_125852.csv.dvc  loss_tonnes_20250508_123954.csv.dvc  loss_tonnes_20250508_125852.csv.dvc  loss_tonnes_20250508_130330.csv.dvc  loss_tonnes_20250508_131019.csv.dvc
backend/examples/: basic_usage.py  track_metrics_example.py  train_model_example.py
backend/metrics/: .gitignore  metrics_20250508_130330.json.dvc
backend/tests/: test_cli.py  test_data_loader.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: apiClient.ts  cropLossService.ts  index.ts  marketService.ts  mlModelService.ts  storageService.ts  types.ts
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: Alert.tsx  Badge.tsx  BarChart.tsx  Button.tsx  Card.tsx  Modal.tsx  ProgressBar.tsx  Stat.tsx  index.ts
frontend/src/components/widgets/: CropLossStats.tsx  LossFactorsWidget.tsx  LossTrendWidget.tsx  MarketOpportunitiesWidget.tsx  StorageUnitsWidget.tsx  index.ts
frontend/src/context/: ThemeContext.tsx
frontend/src/hooks/: index.ts  useCropLoss.ts  useMLModels.ts  useMarket.ts  useStorage.ts
frontend/src/pages/: CropComparison.tsx  Dashboard.tsx  LossAnalysis.tsx  MLflowDashboard.tsx  MarketConnections.tsx  NotFound.tsx  Profile.tsx  Settings.tsx  StorageSolutions.tsx
frontend/src/theme/: theme.ts
frontend/src/utils/: dataTransform.ts  formatters.ts  index.ts  storage.ts  validation.ts
