[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agripreserve"
version = "0.2.0"
description = "A comprehensive platform for analyzing post-harvest losses in Nigeria with DVC and MLflow integration, featuring a React frontend"
readme = "README.md"
authors = [
    {name = "AgriPreserve Team", email = "info@agripreserve.org"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["agriculture", "post-harvest", "nigeria", "data analysis", "mlflow", "dvc", "dagshub", "react", "frontend"]
dependencies = [
    # Web and API
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "gradio>=3.50.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    
    # Data analysis and visualization
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    
    # Machine learning
    "scikit-learn>=1.3.0",
    
    # HTTP and networking
    "requests>=2.31.0",
    
    # DVC and MLflow for tracking metrics and models
    "dvc>=3.0.0",
    "dvc-gdrive>=2.20.0",
    "mlflow>=2.10.0",
    "dagshub>=0.5.0",
    "python-dotenv>=0.19.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/agripreserve/agripreserve"
"Bug Tracker" = "https://github.com/agripreserve/agripreserve/issues"

[project.scripts]
agripreserve = "agripreserve.cli:main"

[tool.setuptools]
packages = ["agripreserve"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=agripreserve --cov-report=term-missing"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]
exclude = [".git", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
